--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,13 +28,8 @@ jobs:
       - name: Install Dependencies
         run: flutter pub get
 
-      - name: Clean Build Environment
-        run: flutter clean
-
       - name: Build APK
-        run: flutter build apk --release --no-pub
-        env:
-          FLUTTER_ROOT: ${{ env.FLUTTER_HOME }}
+        run: flutter build apk --release
 
       - name: Upload APK
         uses: actions/upload-artifact@v4
