--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -6,9 +6,6 @@ pluginManagement {
         if (flutterSdkPath == null) {
             flutterSdkPath = System.getenv("FLUTTER_ROOT")
         }
-        if (flutterSdkPath == null) {
-            throw new GradleException("Flutter SDK not found. Define flutter.sdk in local.properties or FLUTTER_ROOT env variable.")
-        }
         return flutterSdkPath
     }()
 
@@ -26,3 +23,5 @@ plugins {
 }
 
 include ":app"
+
+apply from: "${settings.ext.flutterSdkPath}/packages/flutter_tools/gradle/app_plugin_loader.gradle"
