--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,39 +1,54 @@
-name: Build APK Final
+name: Android Build Fix
 
 on:
   push:
-    branches: [ main, master ]
-  workflow_dispatch:
+    branches: [ main, develop ]
+  pull_request:
+    branches: [ main ]
 
 jobs:
-  build:
+  build-android:
     runs-on: ubuntu-latest
+    
     steps:
-      - uses: actions/checkout@v4
-
-      - name: Set up Java
-        uses: actions/setup-java@v3
-        with:
-          distribution: 'zulu'
-          java-version: '17'
-          cache: 'gradle'
-
-      - name: Set up Flutter
-        uses: subosito/flutter-action@v2
-        with:
-          flutter-version: '3.19.0'
-          channel: 'stable'
-          cache: true
-
-      - name: Install Dependencies
-        run: flutter pub get
-
-      - name: Build APK
-        run: flutter build apk --release
-
-      - name: Upload APK
-        uses: actions/upload-artifact@v4
-        with:
-          name: release-apk
-          path: build/app/outputs/flutter-apk/app-release.apk
-          
+    - uses: actions/checkout@v3
+    
+    - name: Setup Java
+      uses: actions/setup-java@v3
+      with:
+        distribution: 'temurin'
+        java-version: '17'
+    
+    - name: Setup Flutter
+      uses: subosito/flutter-action@v2
+      with:
+        flutter-version: '3.19.0'
+        channel: stable
+    
+    - name: Create local.properties
+      working-directory: ./frontend
+      run: |
+        echo "flutter.sdk=$FLUTTER_HOME" > android/local.properties
+        echo "flutter.versionName=1.0.0" >> android/local.properties
+        echo "flutter.versionCode=1" >> android/local.properties
+        echo "sdk.dir=$ANDROID_HOME" >> android/local.properties
+    
+    - name: Install dependencies
+      working-directory: ./frontend
+      run: flutter pub get
+    
+    - name: Build Android APK
+      working-directory: ./frontend
+      run: |
+        flutter build apk --release \
+          --split-per-abi \
+          --no-shrink \
+          --build-name=1.0.${{ github.run_number }} \
+          --build-number=${{ github.run_number }}
+    
+    - name: Upload APK
+      uses: actions/upload-artifact@v3
+      with:
+        name: cent-android-apk
+        path: frontend/build/app/outputs/flutter-apk/
+        retention-days: 30
