--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,6 +28,7 @@ jobs:
     - name: Create local.properties
       working-directory: ./frontend
       run: |
+        mkdir -p android
         echo "flutter.sdk=$FLUTTER_HOME" > android/local.properties
         echo "flutter.versionName=1.0.0" >> android/local.properties
         echo "flutter.versionCode=1" >> android/local.properties
