--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -11,21 +11,15 @@ if (flutterRoot == null) {
     throw new GradleException("Flutter SDK not found. Define location with flutter.sdk in the local.properties file.")
 }
 
-def flutterVersionCode = localProperties.getProperty('flutter.versionCode')
-if (flutterVersionCode == null) {
-    flutterVersionCode = '1'
-}
-
-def flutterVersionName = localProperties.getProperty('flutter.versionName')
-if (flutterVersionName == null) {
-    flutterVersionName = '1.0'
-}
+def flutterVersionCode = localProperties.getProperty('flutter.versionCode') ?: '1'
+def flutterVersionName = localProperties.getProperty('flutter.versionName') ?: '1.0'
 
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply from: "$flutterRoot/packages/flutter_tools/gradle/flutter.gradle"
 
 android {
+    // Highly Professional Configuration for API 34
     namespace "com.cent.music"
     compileSdkVersion 34
 
@@ -36,6 +30,8 @@ android {
 
     kotlinOptions {
         jvmTarget = '17'
+        // Optimize Kotlin compiler
+        freeCompilerArgs += ["-Xjvm-default=all"]
     }
 
     sourceSets {
@@ -44,18 +40,32 @@ android {
 
     defaultConfig {
         applicationId "com.cent.music"
+        // Required for modern audio apps
         minSdkVersion 23
         targetSdkVersion 34
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
+
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        
+        // Multi-dexing for large music libraries
+        multiDexEnabled true
     }
 
     buildTypes {
         release {
+            // High-level security and performance
             signingConfig signingConfigs.debug
             minifyEnabled true
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            shrinkResources true
+            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+        }
+    }
+
+    // Optimization to avoid build conflicts
+    packagingOptions {
+        resources {
+            excludes += '/META-INF/{AL2.0,LGPL2.1}'
         }
     }
 }
@@ -65,10 +75,14 @@ flutter {
 }
 
 dependencies {
+    // High-performance libraries
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
     implementation 'androidx.core:core-ktx:1.12.0'
+    implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.google.android.material:material:1.10.0'
+    implementation 'androidx.multidex:multidex:2.0.1'
     
+    // Testing suite
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test:runner:1.5.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
