--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,56 +1,48 @@
-name: Android Build Fix
+name: Android CI/CD Build
 
 on:
   push:
-    branches: [ main, develop ]
+    branches: [ "main", "master" ]
   pull_request:
-    branches: [ main ]
+    branches: [ "main", "master" ]
 
 jobs:
-  build-android:
+  build:
     runs-on: ubuntu-latest
-    
+
     steps:
-    - uses: actions/checkout@v4
-    
-    - name: Setup Java
-      uses: actions/setup-java@v4
-      with:
-        distribution: 'temurin'
-        java-version: '17'
-    
-    - name: Setup Flutter
-      uses: subosito/flutter-action@v2
-      with:
-        flutter-version: '3.19.0'
-        channel: stable
-    
-    - name: Create local.properties
-      working-directory: ./frontend
-      run: |
-        mkdir -p android
-        echo "flutter.sdk=$FLUTTER_HOME" > android/local.properties
-        echo "flutter.versionName=1.0.0" >> android/local.properties
-        echo "flutter.versionCode=1" >> android/local.properties
-        echo "sdk.dir=$ANDROID_HOME" >> android/local.properties
-    
-    - name: Install dependencies
-      working-directory: ./frontend
-      run: flutter pub get
-    
-    - name: Build Android APK
-      working-directory: ./frontend
-      run: |
-        flutter build apk --release \
-          --split-per-abi \
-          --no-shrink \
-          --build-name=1.0.${{ github.run_number }} \
-          --build-number=${{ github.run_number }}
-    
-    - name: Upload APK
-      uses: actions/upload-artifact@v4
-      with:
-        name: cent-android-apk
-        path: frontend/build/app/outputs/flutter-apk/
-        retention-days: 30
-        
+      - name: Checkout Repository
+        uses: actions/checkout@v4
+
+      - name: Setup Java 17
+        uses: actions/setup-java@v4
+        with:
+          distribution: 'zulu'
+          java-version: '17'
+          cache: 'gradle'
+
+      - name: Setup Flutter
+        uses: subosito/flutter-action@v2
+        with:
+          flutter-version: '3.19.0'
+          channel: 'stable'
+          cache: true
+
+      - name: Get Dependencies
+        run: flutter pub get
+
+      - name: Create local.properties
+        run: |
+          echo "flutter.sdk=$FLUTTER_ROOT" > android/local.properties
+          echo "flutter.versionCode=1" >> android/local.properties
+          echo "flutter.versionName=1.0.0" >> android/local.properties
+
+      - name: Build APK (Release)
+        run: flutter build apk --release --no-tree-shake-icons
+
+      - name: Upload APK Artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: release-apk
+          path: build/app/outputs/flutter-apk/app-release.apk
+          
