--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,18 +24,20 @@ jobs:
       - name: Setup Flutter
         uses: subosito/flutter-action@v2
         with:
-          flutter-version: '3.19.0'
+          flutter-version: '3.27.1'
           channel: 'stable'
           cache: true
 
       - name: Get Dependencies
-        run: flutter pub get
+        run: |
+          flutter clean
+          flutter pub upgrade
+          flutter pub get
 
       - name: Create local.properties
         run: |
           echo "flutter.sdk=$FLUTTER_ROOT" > android/local.properties
-          echo "flutter.versionCode=1" >> android/local.properties
-          echo "flutter.versionName=1.0.0" >> android/local.properties
+          echo "flutter.buildMode=release" >> android/local.properties
 
       - name: Build APK (Release)
         run: flutter build apk --release --no-tree-shake-icons
@@ -45,4 +47,6 @@ jobs:
         with:
           name: release-apk
           path: build/app/outputs/flutter-apk/app-release.apk
+          if-no-files-found: error
+          retention-days: 7
           
