--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,5 @@
 name: cent_music
 description: "CENT Music Streaming Platform - High Performance Edition"
-# The version follows Semantic Versioning (SemVer)
 version: 1.0.0+1
 
 environment:
@@ -9,39 +8,24 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  cupertino_icons: ^1.0.6
-  
-  # Professional Media & Video handling
-  # Updated to 2.2.2+ for better stream stability
+  cupertino_icons: ^1.0.8
+
+  # High Performance Media Handling
   youtube_explode_dart: ^2.2.2
+  youtube_player_flutter: ^9.1.0
+  flutter_inappwebview: ^6.1.5
   
-  # Critical: Ensure this is 9.0.0 or higher for Android 14 compatibility
-  youtube_player_flutter: ^9.0.0
-  
-  # Professional storage and caching
-  shared_preferences: ^2.2.2
-  cached_network_image: ^3.3.1
-  
-  # Fixed the version to 6.0.0 to fix the 'Namespace' error from your logs
-  flutter_inappwebview: ^6.0.0
+  # Professional Storage & Caching
+  shared_preferences: ^2.2.3
+  cached_network_image: ^3.4.1
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  # High-standard linting for cleaner code
-  flutter_lints: ^3.0.1
+  flutter_lints: ^4.0.0
 
 flutter:
   uses-material-design: true
-  
-  # Optimization: Added assets management placeholders
   assets:
     - assets/images/
-    # - assets/icons/
-
-  # Professional fonts configuration if needed
-  # fonts:
-  #   - family: MainFont
-  #     fonts:
-  #       - asset: assets/fonts/MainFont-Regular.ttf
-  
+    
