--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: cent
-description: A high-performance, encrypted audio streaming engine.
+description: Cent Music App
 version: 1.0.0+1
 publish_to: 'none'
 
@@ -10,27 +10,11 @@ dependencies:
   flutter:
     sdk: flutter
   
-  # المكتبات الأساسية - إصدارات متوافقة مع Dart 3.3.0
-  just_audio: ^0.9.36  # ⚠️ ابقى على الإصدار القديم
-  audio_session: ^0.1.18  # ⚠️ ابقى على الإصدار القديم
-  rxdart: ^0.27.7
-  
-  # مكتبات الواجهة والتصميم
-  google_fonts: ^6.1.0
-  cupertino_icons: ^1.0.6
-  flutter_spinkit: ^5.2.0
-  cached_network_image: ^3.3.0
-  
-  # مكتبات النظام
-  path_provider: ^2.1.2
-  crypto: ^3.0.3
-  permission_handler: ^11.3.1
-  
-  # مكتبات اليوتيوب
-  youtube_explode_dart: ^2.2.2  # ⚠️ ابقى على 2.2.2
-  
-  # إدارة الحالة
+  just_audio: ^0.9.36
+  audio_session: ^0.1.18
+  youtube_explode_dart: ^2.2.2
   provider: ^6.1.1
+  cupertino_icons: ^1.0.6
 
 dev_dependencies:
   flutter_test:
@@ -39,8 +23,3 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
-  # احذف قسم الخطوط إذا لا يوجد ملف
-  # fonts:
-  #   - family: Michroma
-  #     fonts:
-  #       - asset: fonts/Michroma-Regular.ttf
