--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,36 +1,42 @@
-name: Build Cent Supreme APK
+name: Build Cent APK
 
 on:
   push:
     branches: [ main, master ]
-  workflow_dispatch:
+  pull_request:
+    branches: [ main ]
+  workflow_dispatch:  # للتفعيل اليدوي
 
 jobs:
-  build:
+  build-android:
     runs-on: ubuntu-latest
-
+    
     steps:
+    # 1. جلب الكود
     - name: Checkout repository
       uses: actions/checkout@v4
-
-    - name: Setup Java
+      
+    # 2. إعداد Java (مطلوب لـ Android)
+    - name: Setup Java JDK 17
       uses: actions/setup-java@v4
       with:
-        distribution: 'temurin'
         java-version: '17'
-
+        distribution: 'temurin'
+        
+    # 3. إعداد Flutter
     - name: Setup Flutter
       uses: subosito/flutter-action@v2
       with:
-        flutter-version: '3.38.9'  # ⚠️ الجديد
+        flutter-version: '3.19.0'
         channel: 'stable'
-
-    - name: Prepare Scripts
-      run: chmod +x project_sovereign.py
-
-    - name: Run Sovereign Surgical Fix
-      run: python3 project_sovereign.py .
-
+        cache: true
+        cache-key: flutter-cache
+        
+    # 4. عرض إصدار Flutter للتأكد
+    - name: Verify Flutter installation
+      run: flutter --version
+      
+    # 5. إنشاء local.properties للمسارات الصحيحة
     - name: Create local.properties for CI
       run: |
         echo "sdk.dir=$ANDROID_HOME" > android/local.properties
@@ -38,18 +44,72 @@ jobs:
         echo "flutter.versionName=1.0.0" >> android/local.properties
         echo "flutter.versionCode=1" >> android/local.properties
         echo "flutter.buildMode=release" >> android/local.properties
+        
+    # 6. حل مشكلة settings.gradle - إنشاء نسخة بسيطة
+    - name: Fix settings.gradle
+      run: |
+        # نسخة مبسطة من settings.gradle
+        cat > android/settings.gradle << 'EOF'
+        include ':app'
 
-    - name: Get Dependencies
+        def localPropertiesFile = new File(rootProject.projectDir, "local.properties")
+        def properties = new Properties()
+
+        if (localPropertiesFile.exists()) {
+            localPropertiesFile.withReader("UTF-8") { reader ->
+                properties.load(reader)
+            }
+        }
+
+        def flutterSdkPath = properties.getProperty("flutter.sdk")
+        if (flutterSdkPath == null) {
+            throw new GradleException("flutter.sdk not set in local.properties")
+        }
+
+        apply from: "$flutterSdkPath/packages/flutter_tools/gradle/app_plugin_loader.gradle"
+        EOF
+        
+        # عرض المحتوى للتأكد
+        echo "✅ Created settings.gradle:"
+        cat android/settings.gradle
+        
+    # 7. تثبيت الحزم والتبعيات
+    - name: Get Flutter dependencies
       run: |
         flutter pub get
-
-    - name: Build APK
+        flutter clean
+        
+    # 8. تحليل الكود (اختياري)
+    - name: Analyze code
+      run: flutter analyze
+      continue-on-error: true  # لا يوقف البناء إذا كانت هناك تحذيرات
+        
+    # 9. بناء APK مع خيارات خاصة للاستقرار
+    - name: Build APK (Release)
       run: |
         flutter build apk --release \
-          --no-tree-shake-icons
-
-    - name: Upload APK
+          --no-tree-shake-icons \
+          --split-per-abi
+        
+    # 10. رفع الملفات الناتجة
+    - name: Upload APK artifacts
       uses: actions/upload-artifact@v4
       with:
-        name: Cent-Supreme-Release
-        path: build/app/outputs/flutter-apk/app-release.apk
+        name: cent-music-apk
+        path: |
+          build/app/outputs/flutter-apk/app-release.apk
+          build/app/outputs/flutter-apk/app-armeabi-v7a-release.apk
+          build/app/outputs/flutter-apk/app-arm64-v8a-release.apk
+        retention-days: 7
+        
+    # 11. إظهار رابط التحميل
+    - name: Show download info
+      run: |
+        echo "🎵 ==========================================="
+        echo "✅ BUILD SUCCESSFUL!"
+        echo "📱 APK files are available in the Artifacts tab"
+        echo "📦 Files generated:"
+        echo "   - app-release.apk (universal)"
+        echo "   - app-armeabi-v7a-release.apk (32-bit)"
+        echo "   - app-arm64-v8a-release.apk (64-bit)"
+        echo "🎵 ==========================================="
