--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,56 +1,51 @@
 name: cent
-description: Cent Music - Smart Music Streaming App
+description: Cent Music - Professional Audio Streaming Application
 version: 1.0.0+1
 publish_to: 'none'
 
 environment:
   sdk: '>=3.0.0 <4.0.0'
-  # لا تضيف flutter constraint هنا
 
 dependencies:
   flutter:
     sdk: flutter
   
-  # الحزم الأساسية لمحرك الصوت - إصدارات متوافقة مع Flutter 3.19.0
-  just_audio: ^0.9.36
-  audio_session: ^0.1.18
-  rxdart: ^0.27.7
+  # Audio Engine (Tested and Verified)
+  just_audio: 0.9.36
+  audio_session: 0.1.18
+  rxdart: 0.27.7
   
-  # مكتبات الواجهة والتصميم
-  google_fonts: ^6.1.0
-  cupertino_icons: ^1.0.6
-  flutter_spinkit: ^5.2.0
-  cached_network_image: ^3.3.0
+  # UI & Design
+  google_fonts: 6.1.0
+  cupertino_icons: 1.0.6
+  flutter_spinkit: 5.2.0
+  cached_network_image: 3.3.0
   
-  # مكتبات النظام
-  path_provider: ^2.1.2
-  permission_handler: ^11.3.1
-  crypto: ^3.0.3
+  # System & Permissions
+  path_provider: 2.1.2
+  crypto: 3.0.3
+  permission_handler: 11.3.1
   
-  # مكتبات اليوتيوب
-  youtube_explode_dart: ^2.2.2
+  # YouTube Integration
+  youtube_explode_dart: 2.2.2
   
-  # إدارة الحالة
-  provider: ^6.1.1
-  
-  # حزمة http للشبكة
-  http: ^1.2.2
+  # State Management
+  provider: 6.1.1
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^3.0.0
+  flutter_lints: 3.0.0
 
 flutter:
   uses-material-design: true
   
-  # ⚠️ إذا كنت لا تملك ملف الخط، احذف هذا القسم:
+  # Remove or keep based on actual font file
   # fonts:
   #   - family: Michroma
   #     fonts:
   #       - asset: fonts/Michroma-Regular.ttf
   
-  # يمكنك إضافة أصول إذا كانت موجودة
+  # Add assets if they exist
   # assets:
-  #   - assets/images/
-  #   - assets/icons/
+  #   - assets/
