--- a/android/build.gradle
+++ b/android/build.gradle
@@ -3,7 +3,7 @@ buildscript {
     repositories {
         google()
         mavenCentral()
-        jcenter()  # ⚠️ إضافة مهمة
+        jcenter()
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:8.1.0'
@@ -15,7 +15,7 @@ allprojects {
     repositories {
         google()
         mavenCentral()
-        jcenter()  # ⚠️ إضافة مهمة
+        jcenter()
     }
 }
 
